--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
-*,
-*::before,
+* {
+  box-sizing: border-box;
+}
+*::before {
+  box-sizing: border-box;
+}
 *::after {
   box-sizing: border-box;
 }
@@ -103,7 +107,6 @@ a {
 }
 .logo.up:hover {
   color: var(--logo-hover);
-  /* transform: scale(1.1); */
 }
 
 .logo.down {
@@ -155,9 +158,7 @@ a {
 
 .current {
   position: relative;
-  /* animation: flash 2s infinite; */
 }
-
 .current::after {
   content: "";
   display: block;
@@ -299,7 +300,6 @@ a {
 
 .footer-container {
   display: flex;
-  gap: 70px;
   min-width: 206px;
   align-items: baseline;
 }
@@ -311,6 +311,7 @@ a {
 .address {
   font-style: normal;
   margin-top: 20px;
+  margin-right: 80px;
 }
 
 .addr-item:not(:last-child) {
@@ -366,6 +367,83 @@ a {
 
 .soc-icon {
   fill: var(--icon-bg);
+}
+
+.send-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--accent-text-color);
+  margin-bottom: 20px;
+}
+
+.send-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  outline: transparent;
+  padding-left: 16px;
+  margin-right: 12px;
+  background-color: var(--primery-bg-color);
+  display: flex;
+  color: var(--accent-text-color);
+}
+.send-input:focus {
+  border: 1px solid var(--bg-color);
+}
+.send-input::-moz-placeholder {
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25px;
+  display: flex;
+  align-items: center;
+  color: var(--accent-text-color);
+}
+.send-input:-ms-input-placeholder {
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25px;
+  display: flex;
+  align-items: center;
+  color: var(--accent-text-color);
+}
+.send-input::placeholder {
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25px;
+  display: flex;
+  align-items: center;
+  color: var(--accent-text-color);
+}
+
+.send-wrap {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.send-btn {
+  min-width: 200px;
+  min-height: 50px;
+  border-radius: 4px;
+  display: flex;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88px;
+  padding: 10px 28px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  background-color: var(--bg-color);
+  color: var(--accent-text-color);
+  border: none;
+}
+
+.send-icon {
+  fill: var(--icon-bg);
+  padding-left: 10px;
 }
 
 .specialty {
@@ -800,7 +878,7 @@ a {
   border-radius: 4px;
   outline: transparent;
   font-size: 14px;
-  color: #828fca;
+  color: var(--accent-up);
   padding: 12px 16px;
   resize: none;
   transition: border-color;
@@ -810,21 +888,18 @@ a {
 .modal-text:focus {
   border-color: var(--bg-color);
 }
-
 .modal-text::-moz-placeholder {
   font-size: 12px;
   line-height: 1.16x;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-text:-ms-input-placeholder {
   font-size: 12px;
   line-height: 1.16x;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal-text::placeholder {
   font-size: 12px;
   line-height: 1.16x;
@@ -849,6 +924,9 @@ a {
   color: var(--title-text-color);
   font-size: 14px;
   line-height: 1.71px;
+  display: flex;
+  gap: 7px;
+  align-items: center;
 }
 
 .check-link {
@@ -865,96 +943,17 @@ a {
 .icon-uncheck {
   fill: var(--title-text-color);
 }
+.input-check:checked + .check-text .icon-uncheck {
+  opacity: 0;
+}
 
 .icon-check {
   fill: var(--icon-bg);
   background-color: var(--bg-color);
   opacity: 0;
 }
-
-.input-check:checked + .check-text .icon-uncheck {
-  opacity: 0;
-}
-
 .input-check:checked + .check-text .icon-check {
   opacity: 1;
-}
-
-.send-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--accent-text-color);
-  margin-bottom: 20px;
-}
-
-.send-input {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  outline: transparent;
-  padding-left: 16px;
-  margin-right: 12px;
-  background-color: var(--primery-bg-color);
-  display: flex;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.send-input::-moz-placeholder {
-  padding-left: 16px;
-  font-size: 16px;
-  line-height: 1.25px;
-  display: flex;
-  align-items: center;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.send-input:-ms-input-placeholder {
-  padding-left: 16px;
-  font-size: 16px;
-  line-height: 1.25px;
-  display: flex;
-  align-items: center;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.send-input::placeholder {
-  padding-left: 16px;
-  font-size: 16px;
-  line-height: 1.25px;
-  display: flex;
-  align-items: center;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.send-wrap {
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.send-btn {
-  min-width: 200px;
-  min-height: 50px;
-  border-radius: 4px;
-  display: flex;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88px;
-  padding: 10px 28px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  background-color: var(--bg-color);
-  color: var(--accent-text-color);
-  border: none;
-}
-
-.send-icon {
-  fill: var(--icon-bg);
-  padding-left: 10px;
 }
 
 .is-hidden {
