--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,10 +1,18 @@
-*,
-*::before,
-*::after {
+// *,
+// *::before,
+// *::after {
+//   box-sizing: border-box;
+// }
+
+* {
   box-sizing: border-box;
+  &::before {
+    box-sizing: border-box;
+  }
+  &::after {
+    box-sizing: border-box;
+  }
 }
-
-
 
 body {
   background-color: var(--accent-text-color);
