--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,280 +1,206 @@
 .backdrop {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.2);
-    top: 0;
-    transition: opacity, visibility;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .modal {
-    width: 528px;
-    min-height: 581px;
-    background-color: var(--icon-bg);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scaleY(1);
-    transition: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 40px;
-  }
-  
-  .backdrop.is-hidden .modal {
-    transform: translate(-50%, 50%) scaleY(0);
-  }
-  
-  .close-btn {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: var(--icon-bg);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .close-icon {
-    fill: var(--accent-up);
-  }
-  
-  
-  
-  .modal-title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15px;
-    text-align: center;
-    color: var(--title-text-color);
-    margin-bottom: 12px;
-  }
-  
-  .modal-input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: transparent;
-    padding-left: 41px;
-    transition: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  top: 0;
+  transition: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    &:focus {
-      border-color: var(--bg-color);
-    }
-  }
-  
-  
-  
-  .input-icon {
-    transition: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.modal {
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--icon-bg);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scaleY(1);
+  transition: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
+}
 
-    .modal-input:focus + & {
-      fill: var(--bg-color);
-    }
-  }
-  
-  
-  
-  .modal-btn {
-    min-width: 200px;
-    height: 50px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88px;
-    display: block;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--accent-text-color);
-  
-    border: none;
-    border-radius: 4px;
-    background-color: var(--bg-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    margin: 0 auto;
-    transition: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, 50%) scaleY(0);
+}
 
-    &:hover,
-    &:focus {
-      background-color: var(--logo-hover);
-    }
-  }
-  
-  
-  
-  .modal-label {
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: var(--primery-text-color);
-  }
-  
-  .modal-field {
-    margin-bottom: 10px;
-  }
-  
-  .input-wrap {
-    position: relative;
-  }
-  
-  .input-icon {
-    position: absolute;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .modal-text {
-    width: 100%;
-    height: 120px;
-  
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: transparent;
-    font-size: 14px;
-    color: #828fca;
-    padding: 12px 16px;
-    resize: none;
-    transition: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.close-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: var(--icon-bg);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    &:focus {
-      border-color: var(--bg-color);
-    }
+.close-icon {
+  fill: var(--accent-up);
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15px;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  padding-left: 41px;
+  transition: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus {
+    border-color: var(--bg-color);
   }
-  
-  .modal-text::placeholder {
+}
+
+.input-icon {
+  transition: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  .modal-input:focus + & {
+    fill: var(--bg-color);
+  }
+}
+
+.modal-btn {
+  min-width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88px;
+  display: block;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--accent-text-color);
+
+  border: none;
+  border-radius: 4px;
+  background-color: var(--bg-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+  transition: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--logo-hover);
+  }
+}
+
+.modal-label {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primery-text-color);
+}
+
+.modal-field {
+  margin-bottom: 10px;
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal-text {
+  width: 100%;
+  height: 120px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  font-size: 14px;
+  color: var(--accent-up);
+
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus {
+    border-color: var(--bg-color);
+  }
+
+  &::placeholder {
     font-size: 12px;
     line-height: 1.16x;
     letter-spacing: 0.01em;
-      color: rgba(117, 117, 117, 0.5);
+    color: rgba(117, 117, 117, 0.5);
 
-      .modal-text:focus &{
-        color: var(--bg-color);
-      }
+    .modal-text:focus & {
+      color: var(--bg-color);
+    }
   }
-  
-  
-  
-  
-  
-  .chek-field {
-    margin-bottom: 30px;
-  }
-  
-  .check-text {
-    color: var(--title-text-color);
-  
-    font-size: 14px;
-    line-height: 1.71px;
-  }
-  
-  .check-link {
-    color: var(--bg-color);
-    text-decoration-line: underline;
-    /* text-underline-position: under; */
-    text-decoration-skip-ink: none;
-    font-size: 14px;
-    line-height: 1.71px;
-  }
-  
-  .icon-uncheck {
-    fill: var(--title-text-color);
-  }
-  
-  .icon-check {
-    fill: var(--icon-bg);
-    background-color: var(--bg-color);
-  
+}
+
+.chek-field {
+  margin-bottom: 30px;
+}
+
+.check-text {
+  color: var(--title-text-color);
+
+  font-size: 14px;
+  line-height: 1.71px;
+  display: flex;
+  gap: 7px;
+  align-items: center;
+}
+
+.check-link {
+  color: var(--bg-color);
+  text-decoration-line: underline;
+  /* text-underline-position: under; */
+  text-decoration-skip-ink: none;
+  font-size: 14px;
+  line-height: 1.71px;
+}
+
+.icon-uncheck {
+  fill: var(--title-text-color);
+
+  .input-check:checked + .check-text & {
     opacity: 0;
   }
-  
-  .input-check:checked + .check-text .icon-uncheck {
-    opacity: 0;
-  }
-  
-  .input-check:checked + .check-text .icon-check {
+}
+
+.icon-check {
+  fill: var(--icon-bg);
+  background-color: var(--bg-color);
+  opacity: 0;
+
+  .input-check:checked + .check-text & {
     opacity: 1;
   }
-  
-  .send-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-  
-    text-transform: uppercase;
-  
-    color: var(--accent-text-color);
-    margin-bottom: 20px;
-  }
-  
-  .send-input {
-    width: 358px;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    outline: transparent;
-    padding-left: 16px;
-    margin-right: 12px;
-    background-color: var(--primery-bg-color);
-    display: flex;
-    color: rgba(255, 255, 255, 0.6);
-  }
-  
-  .send-input::placeholder {
-    padding-left: 16px;
-    font-size: 16px;
-    line-height: 1.25px;
-  
-    display: flex;
-  
-    align-items: center;
-    color: rgba(255, 255, 255, 0.6);
-  }
-  
-  .send-wrap {
-    display: flex;
-    margin-bottom: 20px;
-  }
-  
-  .send-btn {
-    min-width: 200px;
-    min-height: 50px;
-    border-radius: 4px;
-    display: flex;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88px;
-    padding: 10px 28px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-  
-    letter-spacing: 0.06em;
-    background-color: var(--bg-color);
-    color: var(--accent-text-color);
-    border: none;
-  }
-  
-  .send-icon {
-    fill: var(--icon-bg);
-    padding-left: 10px;
-  }
-  
+}
