--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,100 +1,163 @@
 .footer {
-    background-color: var(--primery-bg-color);
-    font-size: 14px;
-    line-height: 1.71;
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  
-  .footer-link {
-    color: var(--footer-link);
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--primery-bg-color);
+  font-size: 14px;
+  line-height: 1.71;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 
-    &:hover,
-    &:focus {
-      color: var(--bg-color);
-    }
-  }
-  
-  
-  
-  .footer-container {
-    display: flex;
-    gap: 70px;
-    min-width: 206px;
-    align-items: baseline;
-  }
-  
-  .accent-down {
-    color: var(--accent-text-color);
-  }
-  
-  .address {
-    font-style: normal;
-    margin-top: 20px;
-  }
-  
-  .addr-item:not(:last-child) {
-    margin-bottom: 9px;
-  }
-  
-  .addr.link {
-    color: var(--accent-text-color);
-    display: block;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.footer-link {
+  color: var(--footer-link);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover {
-      color: var(--bg-color);
-    }
+  &:hover,
+  &:focus {
+    color: var(--bg-color);
   }
-  
-  
-  
-  .soc {
-    margin-right: 93px;
+}
+
+.footer-container {
+  display: flex;
+
+  min-width: 206px;
+  align-items: baseline;
+}
+
+.accent-down {
+  color: var(--accent-text-color);
+}
+
+.address {
+  font-style: normal;
+  margin-top: 20px;
+  margin-right: 80px;
+}
+
+.addr-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.addr.link {
+  color: var(--accent-text-color);
+  display: block;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    color: var(--bg-color);
   }
-  
-  .soc-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-  
-    color: var(--accent-text-color);
+}
+
+.soc {
+  margin-right: 93px;
+}
+
+.soc-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+
+  color: var(--accent-text-color);
+}
+
+.soc-list {
+  display: flex;
+  gap: 10px;
+  min-width: 170px;
+}
+
+.soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: var(--icon-bg);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--bg-color);
   }
-  
-  .soc-list {
+}
+
+.soc-icon {
+  fill: var(--icon-bg);
+}
+
+.send-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+
+  text-transform: uppercase;
+
+  color: var(--accent-text-color);
+  margin-bottom: 20px;
+}
+
+.send-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  outline: transparent;
+  padding-left: 16px;
+  margin-right: 12px;
+  background-color: var(--primery-bg-color);
+  display: flex;
+  color: var(--accent-text-color);
+
+  &:focus {
+    border: 1px solid var(--bg-color);
+  }
+
+  &::placeholder {
+    padding-left: 16px;
+    font-size: 16px;
+    line-height: 1.25px;
+
     display: flex;
-    gap: 10px;
-    min-width: 170px;
-  }
-  
-  .soc-link {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    display: flex;
-    justify-content: center;
+
     align-items: center;
-    fill: var(--icon-bg);
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--accent-text-color);
+  }
+}
 
-    &:hover,
-    &:focus {
-      background-color: var(--bg-color);
-    }
-  }
-  
-  
-  
-  .soc-icon {
-    fill: var(--icon-bg);
-  }
+.send-wrap {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.send-btn {
+  min-width: 200px;
+  min-height: 50px;
+  border-radius: 4px;
+  display: flex;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88px;
+  padding: 10px 28px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  letter-spacing: 0.06em;
+  background-color: var(--bg-color);
+  color: var(--accent-text-color);
+  border: none;
+}
+
+.send-icon {
+  fill: var(--icon-bg);
+  padding-left: 10px;
+}
