--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,100 +1,90 @@
 .header {
-    border-bottom: 1px solid #ececec;
-  }
-  
-  .header-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .logo {
-    color: var(--bg-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    text-decoration-line: none;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .logo.up {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    margin-right: 93px;
+  border-bottom: 1px solid #ececec;
+}
 
-    &:hover {
-      color: var(--logo-hover);
-      /* transform: scale(1.1); */
-    }
-  }
-  
-  .logo.down {
-    display: block;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
 
+.logo {
+  color: var(--bg-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration-line: none;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    &:hover {
-      color: var(--logo-hover);
-      /* transform: scale(1.1); */
-    }
-  }
-  
-  
-  
-  
-  .accent-up {
-    color: var(--accent-up);
-  }
-  
-  .nav-gen-container {
-    display: flex;
-  }
-  
-  .nav-container {
-    display: flex;
-    gap: 50px;
-  }
-  
-  .site-nav {
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-  
-    padding-top: 32px;
-    padding-bottom: 32px;
-    width: 281px;
-  }
-  
-  .site-nav .link.current {
-    color: var(--bg-color);
-  }
-  
-  .site-nav .link {
-    padding-bottom: 32px;
-  }
-  
-  .nav-link{
+.logo.up {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
 
-    &:hover,
-    &:focus {
+  &:hover {
+    color: var(--logo-hover);
+  }
+}
+
+.logo.down {
+  display: block;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    color: var(--logo-hover);
+    /* transform: scale(1.1); */
+  }
+}
+
+.accent-up {
+  color: var(--accent-up);
+}
+
+.nav-gen-container {
+  display: flex;
+}
+
+.nav-container {
+  display: flex;
+  gap: 50px;
+}
+
+.site-nav {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+  width: 281px;
+}
+
+.site-nav .link.current {
+  color: var(--bg-color);
+}
+
+.site-nav .link {
+  padding-bottom: 32px;
+}
+
+.nav-link {
+  &:hover,
+  &:focus {
     color: var(--bg-color);
   }
-  }
-  
-  
-  .current {
-    position: relative;
-  
-    /* animation: flash 2s infinite; */
-  }
-  
-  .current::after {
+}
+
+.current {
+  position: relative;
+
+  &::after {
     content: "";
     display: block;
     width: 100%;
@@ -105,62 +95,58 @@
     left: 0;
     background-color: currentColor;
   }
-  
-  .mail-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .mail-tel .link {
-    color: var(--primery-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    display: flex;
-    align-items: center;
-    padding-top: 28px;
-    padding-bottom: 32px;
-  }
-  
-  .mess-container {
-    display: flex;
-    gap: 50px;
-    align-items: baseline;
-  }
-  
-  .mess-link {
-    display: flex;
-    align-items: center;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    &:hover,
-    &:focus {
-      color: var(--bg-color);
-    }
-    
-  }
-  
-  
-  .mess-icon {
-    fill: var(--primery-text-color);
-    margin-right: 10px;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.mail-container {
+  display: flex;
+  align-items: center;
+}
 
-    .mess-link:hover &,
-    .mess-link:focus & {
-      fill: var(--bg-color);
-    }
+.mail-tel .link {
+  color: var(--primery-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
+  padding-top: 28px;
+  padding-bottom: 32px;
+}
 
+.mess-container {
+  display: flex;
+  gap: 50px;
+  align-items: baseline;
+}
+
+.mess-link {
+  display: flex;
+  align-items: center;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--bg-color);
   }
-  
-  
-  
-  .mail.link,
-  .tel.link {
-    display: block;
+}
+
+.mess-icon {
+  fill: var(--primery-text-color);
+  margin-right: 10px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  .mess-link:hover &,
+  .mess-link:focus & {
+    fill: var(--bg-color);
   }
+}
+
+.mail.link,
+.tel.link {
+  display: block;
+}
