chahge class name
cut out style

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './base/reset';
+@import './utils/mixins';
 @import './layouts/header';
 @import './layouts/hero';
 @import './layouts/footer';
