--- a/sass/layouts/_specialty.scss
+++ b/sass/layouts/_specialty.scss
@@ -14,7 +14,7 @@
   max-width: 270px;
 }
 
-.specialty__item-container {
+.specialty__container {
   width: 270px;
   height: 120px;
   background: #f5f4fa;
